# refill

./: .gitignore  CMakeLists.txt  LICENSE  README.md
catkin/: CMakeLists.txt  package.xml
devtools/: cpplint.py  init-git-hooks.py  pre-commit  run_checks.py
doc/: config.DoxyFile
doc/html/: _formulas.tex  annotated.html  classes.html  classrefill_1_1DistributionBase-members.html  classrefill_1_1DistributionBase.html  classrefill_1_1DistributionBase__coll__graph.map  classrefill_1_1DistributionBase__coll__graph.md5  classrefill_1_1DistributionInterface-members.html  classrefill_1_1DistributionInterface.html  classrefill_1_1DistributionInterface__inherit__graph.map  classrefill_1_1DistributionInterface__inherit__graph.md5  classrefill_1_1ExtendedKalmanFilter-members.html  classrefill_1_1ExtendedKalmanFilter.html  classrefill_1_1ExtendedKalmanFilter__coll__graph.map  classrefill_1_1ExtendedKalmanFilter__coll__graph.md5  classrefill_1_1ExtendedKalmanFilter__inherit__graph.map  classrefill_1_1FilterBase-members.html  classrefill_1_1FilterBase.html  classrefill_1_1FilterBase__inherit__graph.map  classrefill_1_1FilterBase__inherit__graph.md5  classrefill_1_1GaussianDistribution-members.html  classrefill_1_1GaussianDistribution.html  classrefill_1_1GaussianDistribution__coll__graph.map  classrefill_1_1GaussianDistribution__coll__graph.md5  classrefill_1_1LinearMeasurementModel-members.html  classrefill_1_1LinearMeasurementModel.html  classrefill_1_1LinearMeasurementModel__coll__graph.map  classrefill_1_1LinearMeasurementModel__coll__graph.md5  classrefill_1_1LinearMeasurementModel__inherit__graph.map  classrefill_1_1LinearMeasurementModel__inherit__graph.md5  classrefill_1_1LinearSystemModel-members.html  classrefill_1_1LinearSystemModel.html  classrefill_1_1LinearSystemModel__coll__graph.map  classrefill_1_1LinearSystemModel__coll__graph.md5  classrefill_1_1LinearSystemModel__inherit__graph.map  classrefill_1_1LinearSystemModel__inherit__graph.md5  classrefill_1_1LinearizedMeasurementModel-members.html  classrefill_1_1LinearizedMeasurementModel.html  classrefill_1_1LinearizedMeasurementModel__coll__graph.map  classrefill_1_1LinearizedMeasurementModel__coll__graph.md5  (+159 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: annotated.tex  classrefill_1_1DistributionBase.tex  classrefill_1_1DistributionBase__coll__graph.md5  classrefill_1_1DistributionInterface.tex  classrefill_1_1DistributionInterface__inherit__graph.md5  classrefill_1_1ExtendedKalmanFilter.tex  classrefill_1_1ExtendedKalmanFilter__coll__graph.md5  classrefill_1_1ExtendedKalmanFilter__inherit__graph.md5  classrefill_1_1FilterBase.tex  classrefill_1_1FilterBase__inherit__graph.md5  classrefill_1_1GaussianDistribution.tex  classrefill_1_1GaussianDistribution__coll__graph.md5  classrefill_1_1LinearMeasurementModel.tex  classrefill_1_1LinearMeasurementModel__coll__graph.md5  classrefill_1_1LinearMeasurementModel__inherit__graph.md5  classrefill_1_1LinearSystemModel.tex  classrefill_1_1LinearSystemModel__coll__graph.md5  classrefill_1_1LinearSystemModel__inherit__graph.md5  classrefill_1_1LinearizedMeasurementModel.tex  classrefill_1_1LinearizedMeasurementModel__coll__graph.md5  classrefill_1_1LinearizedMeasurementModel__inherit__graph.md5  classrefill_1_1LinearizedSystemModel.tex  classrefill_1_1LinearizedSystemModel__coll__graph.md5  classrefill_1_1LinearizedSystemModel__inherit__graph.md5  classrefill_1_1MeasurementModelBase.tex  classrefill_1_1MeasurementModelBase__inherit__graph.md5  classrefill_1_1SystemModelBase.tex  classrefill_1_1SystemModelBase__inherit__graph.md5  dir_075c975e951f224ac7c45a7762f369cd.tex  dir_075c975e951f224ac7c45a7762f369cd_dep.md5  dir_1bc13244e26df1e1f069a1fd18e36da3.tex  dir_1bc13244e26df1e1f069a1fd18e36da3_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6a06d40b6ce43df82a7c19efd7c5d4d0.tex  dir_6a06d40b6ce43df82a7c19efd7c5d4d0_dep.md5  dir_b13a322cf3572ab394e102f5bac23915.tex  dir_c8d32926118ce332e43468369d858c0c.tex  dir_c8d32926118ce332e43468369d858c0c_dep.md5  dir_cd76bb8ea6b64c9528b9693739029e1f.tex  (+58 more)
include/refill/: filter_base.h  gaussian_distribution-inl.h  gaussian_distribution.h  kalman_filter-inl.h  kalman_filter.h
include/refill/distributions/: distribution_base.h  gaussian_distribution-inl.h  gaussian_distribution.h  likelihood.h
include/refill/filters/: extended_kalman_filter-inl.h  extended_kalman_filter.h  filter_base.h  kalman_filter-inl.h  kalman_filter.h  particle_filter.h  unscented_kalman_filter.h
include/refill/system_models/: linear_system_model.h  (+4 more)
src/: extended_kalman_filter_test.cc  gaussian_distribution.cc  gaussian_distribution_test.cc  kalman_filter.cc  kalman_filter_test.cc  linear_measurement_model_test.cc  linear_system_model_test.cc
src/distributions/: distribution_base.cc  gaussian_distribution.cc  likelihood.cc
src/examples/: kalman_filter_example.cc
src/filters/: extended_kalman_filter.cc  filter_base.cc  particle_filter.cc  unscented_kalman_filter.cc
src/measurement_models/: linear_measurement_model.cc  linearized_measurement_model.cc  measurement_model_base.cc
src/system_models/: linear_system_model.cc  linearized_system_model.cc  system_model_base.cc
src/tests/: distribution_base_test.cc  extended_kalman_filter_test.cc  gaussian_distribution_test.cc  likelihood_test.cc  linear_measurement_model_test.cc  linear_system_model_test.cc  linearized_measurement_model_test.cc  linearized_system_model_test.cc  measurement_model_base_test.cc  particle_filter_test.cc  system_model_base_test.cc  unscented_kalman_filter_test.cc
(+6 files in other folders)
